Create employee table using EF Code First migrations

--- a/OMSWeb/OMSWeb.csproj
+++ b/OMSWeb/OMSWeb.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>aba7784a-f928-4fec-a329-bc8e7ef88b98</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
