--- a/OMSWeb/appsettings.json
+++ b/OMSWeb/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-JC5CNKK\\SQLEXPRESS;Initial Catalog=orgmgmt;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True"
-  }
+  "AllowedHosts": "*"
 }
