--- a/OMSAPI/appsettings.json
+++ b/OMSAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"OMSConnectionString": "Data Source=(localdb)\\ProjectModels;Initial Catalog=Org_Mgmnt;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "OMSConnectionString2": "server=(localdb)\\ProjectModels;database=OMS;Trusted_Connection=true"
+  },"
 }
