--- a/OMSWeb/OMSWeb.csproj
+++ b/OMSWeb/OMSWeb.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\**" />
+    <Content Remove="Migrations\**" />
+    <EmbeddedResource Remove="Migrations\**" />
+    <None Remove="Migrations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OMS.Common\OMS.Common.csproj" />
   </ItemGroup>
 
